--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "webpack-dev-server --port 3000 --mode development"
   },
   "dependencies": {
+    "image-q": "^4.0.0",
     "materialize-css": "1.0.0-rc.2",
     "webpack-dev-server": "^5.2.2"
   },
